# IMC-Prosperity2026

./: .gitignore  README.md
ROUND1/: sweep_v4.py  trader.py  trader_v10.py  trader_v11.py  trader_v2.py  trader_v3.py  trader_v4.py  trader_v4_tmp.py  trader_v5.py  trader_v6.py  trader_v7.py  trader_v8.py  trader_v9.py
ROUND2/: trader.py  trader_v1.py  trader_v10.py  trader_v11.py  trader_v12.py  trader_v13.py  trader_v14.py  trader_v2.py  trader_v3.py  trader_v4.py  trader_v5.py  trader_v6.py  trader_v7.py  trader_v8.py  trader_v9.py
ROUND2/research/: capsule_stats.py
imc-prosperity-3-main/: README.md  pyproject.toml  requirements.txt
imc-prosperity-3-main 2/: .gitignore  readme.md
imc-prosperity-3-main 2/ROUND 1/: bottleeda.ipynb  dense_window_optimization.csv  final_round_1_trader.py  kelp_trader_v1.py  kelp_trader_v2.py  manual.ipynb  manualtradecheck.cpp  optimizer.py  trader.py  traderv2.py  traderv3.py  traderv4.py  traderv5 copy 2.py  traderv5 copy.py  traderv5.py  traderv7.py
imc-prosperity-3-main 2/ROUND 2/: FINAL_FRENCH_GUY.py  analysis.ipynb  basket_gridsearch_results.csv  cmm_with_spikes_final_version.py  crossaints_buyer_v1.py  french_guy.py  gridsearch.py  manual_trading.py  manualn-.ipynb  richpplmanual.py
imc-prosperity-3-main 2/ROUND 3/: big_volcano_man copy.py  big_volcano_man.py  dabeer.ipynb  manualn.ipynb  round3 analysis.ipynb  (+3 more)
imc-prosperity-3-main/notebooks/: analysis.ipynb  conversions.py  counterparty_edge.ipynb  kalman.ipynb  round5_analysis.ipynb  secret.ipynb
imc-prosperity-4-backtester-master/: README.md  pyproject.toml
(+16 files in other folders)
